--- a/DM2025-Lab1-Homework.ipynb
+++ b/DM2025-Lab1-Homework.ipynb
@@ -128,7 +128,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "DM2025LAB1",
    "language": "python",
    "name": "python3"
   },
@@ -142,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
